[isort]
profile = black
skip = 
	./build,
	.nox,
	.tox,
	.scratch,
	_vendor,
	data
known_third_party = 
	pip._vendor

[flake8]
max-line-length = 88
exclude = 
	./build,
	.nox,
	.tox,
	.scratch,
	_vendor,
	data
enable-extensions = G
extend-ignore = 
	G200, G202,
	E203,
	B019,
	B020,
per-file-ignores = 
	noxfile.py: G
	tests/*: B011

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_any_generics = True
warn_unused_ignores = True
no_implicit_optional = True

[mypy-pip._vendor.*]
ignore_errors = True

[mypy-pip._vendor.colorama]
follow_imports = skip

[mypy-pip._vendor.pkg_resources]
follow_imports = skip

[mypy-pip._vendor.progress.*]
follow_imports = skip

[mypy-pip._vendor.requests.*]
follow_imports = skip

[tool:pytest]
addopts = --ignore src/pip/_vendor --ignore tests/tests_cache -r aR --color=yes
xfail_strict = True
markers = 
	network: tests that need network
	incompatible_with_sysconfig
	incompatible_with_test_venv
	incompatible_with_venv
	no_auto_tempdir_manager
	unit: unit tests
	integration: integration tests
	bzr: VCS: Bazaar
	svn: VCS: Subversion
	mercurial: VCS: Mercurial
	git: VCS: git
	search: tests for 'pip search'

[coverage:run]
branch = True
omit = */_vendor/*
data_file = ${COVERAGE_OUTPUT_DIR}/.coverage
parallel = True
disable_warnings = module-not-measured

[coverage:paths]
source0 = 
	src/pip/
	*/site-packages/pip/
	*/pip/src/pip/

[coverage:report]
exclude_lines = 
	pragma: no cover
	if TYPE_CHECKING

[metadata]
license_file = LICENSE.txt

[egg_info]
tag_build = 
tag_date = 0

